[annotation] [profile] Fix overflow

--- a/src/components/discovery-annotation/discovery-annotation.scss
+++ b/src/components/discovery-annotation/discovery-annotation.scss
@@ -1,5 +1,5 @@
 /*!
- *   Copyright 2022  SenX S.A.S.
+ *   Copyright 2022-2025 SenX S.A.S.
  *
  *   Licensed under the Apache License, Version 2.0 (the "License");
  *   you may not use this file except in compliance with the License.
@@ -20,22 +20,25 @@
   height: 100%;
   position: relative;
 
-  .expander {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 35px;
-    z-index: 9;
-    margin: 5px;
-  }
-
-  .chart-area {
-    // padding-top: 20px;
-    position: absolute;
-    top: 20px;
-    left: 0;
+  .chart-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
     width: 100%;
-    z-index: 5;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    .expander {
+      width: 35px;
+      margin-left: 5px;
+    }
+
+    .chart-area {
+      flex-grow: 1;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .discovery-chart-spinner {
