--- a/src/components/discovery-profile/discovery-profile.scss
+++ b/src/components/discovery-profile/discovery-profile.scss
@@ -1,5 +1,5 @@
 /*!
- *   Copyright 2022  SenX S.A.S.
+ *   Copyright 2022-2025 SenX S.A.S.
  *
  *   Licensed under the Apache License, Version 2.0 (the "License");
  *   you may not use this file except in compliance with the License.
@@ -15,31 +15,41 @@
  */
 
 :host {
-  & > div {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  .chart-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
     width: 100%;
     height: 100%;
-    position: relative;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-right: 15px;
 
-    .chart-wrapper {
-      height: 100%;
-      position: absolute;
-      width: calc(100% - 20px);
+    .expander {
+      width: 35px;
+      margin-left: 5px;
     }
 
-    & > div {
+    .chart-area {
+      flex-grow: 1;
       width: 100%;
       height: 100%;
     }
   }
 
-  .wv-tooltip {
-    max-width: 300px;
-
-    div {
-      word-wrap: anywhere;
-    }
+  .discovery-chart-spinner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 900;
   }
 }
